# anxibo

./: .gitignore  README.md  ansible.cfg  hosts  pyproject.toml  requirements.txt
lemp/: lemp.yml  proxy.yml  setup.yml  site.yml
lemp/roles/confirm/tasks/: main.yml
lemp/roles/linux/tasks/: datetime.yml  main.yml  network.yml  packages.yml  security.yml  sysctl.yml
lemp/roles/linux/templates/: resolv.conf.j2
lemp/roles/mysql_install/tasks/: main.yml
lemp/roles/mysql_install/templates/: my.cnf.j2  mybackup.sh.j2  mysqld.conf.j2
lemp/roles/nginx_install/tasks/: configure.yml  install.yml  lego.yml  main.yml
lemp/roles/nginx_install/templates/: 00-nginx.conf.j2  01-default.conf.j2  acme.j2  default.conf.j2  fastcgi_snippets.j2  general.j2  http3.j2  lego.sh.j2  nginx.conf.j2  php_fastcgi.j2  proxy_ssl.j2  reload_at.sh.j2  renew_cron.sh.j2  security.j2  server_snippet.j2  tls_snippet.j2
lemp/roles/nodejs_install/tasks/: main.yml
lemp/roles/php_install/tasks/: composer.yml  main.yml
lemp/roles/php_install/templates/: 90-custom-cli.ini.j2  90-custom-fpm.ini.j2
lemp/roles/proxy_create/tasks/: main.yml
lemp/roles/proxy_create/templates/: vhost.conf.j2  vhost_tls.conf.j2
lemp/roles/redis_install/tasks/: main.yml
lemp/roles/site_create/tasks/: main.yml  site_create.yml  tls.yml  user_create.yml
lemp/roles/site_create/templates/: pool.conf.j2  vhost.conf.j2  vhost_tls.conf.j2
lemp/vars/: all.yml
