[tool.poetry]
name = "anxibo"
version = "0.1.0"
description = ""
authors = ["KhanhIceTea <khanhicetea@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "4.2.0"
ansible-core = "2.11.2"
cffi = "1.14.5"
cryptography = "3.4.7"
Jinja2 = "3.0.1"
MarkupSafe = "2.0.1"
packaging = "21.0"
pycparser = "2.20"
pyparsing = "2.4.7"
PyYAML = "5.4.1"
resolvelib = "0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
